test-suite/invalid/citation-invalid-quality.glx
# TEST: citation-invalid-quality
# EXPECT: invalid
# ERROR: "quality must be between 0 and 3"
# DESCRIPTION: Citation quality must be 0-3 scale

id: citation-j0k1l2m3
version: "1.0"
type: citation
source: source-test
quality: 5  # Invalid: quality must be 0-3
